@@ -3,12 +3,13 @@ package smu.poodle.smnavi.map.service;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import smu.poodle.smnavi.map.domain.mapping.FullPathAndSubPath;
 import smu.poodle.smnavi.map.domain.path.FullPath;
-import smu.poodle.smnavi.map.domain.path.SubPath;
+import smu.poodle.smnavi.map.domain.station.Place;
 import smu.poodle.smnavi.map.domain.station.Waypoint;
+import smu.poodle.smnavi.map.dto.AbstractWaypointDto;
 import smu.poodle.smnavi.map.dto.PathDto;
 import smu.poodle.smnavi.map.dto.RouteDto;
+import smu.poodle.smnavi.map.dto.WaypointDto;
 import smu.poodle.smnavi.map.repository.*;
 
 import java.util.ArrayList;
@@ -21,25 +22,14 @@ import java.util.stream.Collectors;
 public class PathService {
 
     private final TransitRepository transitRepository;
-    private final SubwayStationRepository subwayStationRepository;
-    private final BusStationRepository busStationRepository;
+    private final FullPathRepository fullPathRepository;
+    private final PlaceRepository placeRepository;
 
 
-    public List<PathDto.Info> getTransitRoute(String startStationId) {
+    public List<PathDto.Info> getPathByStartPlace(Long startPlaceId) {
         List<PathDto.Info> pathInfoList = new ArrayList<>();
 
-        List<Waypoint> waypoints;
-        if (startStationId.length() < 5) {
-            waypoints = subwayStationRepository.findAllByStationId(Integer.parseInt(startStationId));
-        } else {
-            waypoints = busStationRepository.findAllByLocalStationId(startStationId);
-        }
-
-        List<FullPath> fullPaths = new ArrayList<>();
-
-        for (Waypoint waypoint : waypoints) {
-            fullPaths.addAll(waypoint.getFullPaths());
-        }
+        List<FullPath> fullPaths = fullPathRepository.findByStartPlaceId(startPlaceId);
 
         for (FullPath fullPath : fullPaths) {
             PathDto.Info pathDto = PathDto.Info.fromEntity(fullPath);
@@ -49,12 +39,9 @@ public class PathService {
         return pathInfoList;
     }
 
-    public List<RouteDto.Info> getRouteList() {
-        List<FullPath> fullPathList = transitRepository.findAllRouteSeenTrue();
-
+    public List<AbstractWaypointDto> getRouteList() {
         //todo: fullpath가 가지고 있는 startstation의 목록을 반환해주는 쿼리를 작성해보기
-        List<Waypoint> waypoints = fullPathList.stream().map(FullPath::getStartWaypoint).distinct().toList();
-        return waypoints.stream().map(RouteDto.Info::new).collect(Collectors.toList());
+        return placeRepository.findAllStartPlace().stream().map(Waypoint::toDto).toList();
     }
 
     public void updateRouteSeen(Long id) {
